force-app/main/default/objects/AssessmentTask/fields/Captured_On_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Captured_On_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this observation was captured on a mobile device</description>
    <inlineHelpText>Automatically set when the observation is created via the Salesforce Mobile app.</inlineHelpText>
    <label>Captured On Mobile</label>
    <type>Checkbox</type>
</CustomField>