force-app/main/default/objects/AssessmentTask/fields/Observation_Category__c.field-meta.xml
<CustomField>
    <fullName>Observation_Category__c</fullName>
    <description>Category of the observation captured during the visit</description>
    <inlineHelpText>Categorize this observation as a safety hazard, mobility issue, child risk, environmental concern, or interview note.</inlineHelpText>
    <label>Observation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety Hazard</fullName>
            </value>
            <value>
                <fullName>Mobility Issue</fullName>
            </value>
            <value>
                <fullName>Child Risk</fullName>
            </value>
            <value>
                <fullName>Environmental Concern</fullName>
            </value>
            <value>
                <fullName>Interview Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>