force-app/main/default/objects/AssessmentTask/fields/Photo_Attached__c.field-meta.xml
<CustomField>
    <fullName>Photo_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a photo was attached to this observation</description>
    <inlineHelpText>Check if a photo was captured with this observation.</inlineHelpText>
    <label>Photo Attached</label>
    <type>Checkbox</type>
</CustomField>