force-app/main/default/objects/AssessmentTask/fields/Room_Location__c.field-meta.xml
<CustomField>
    <fullName>Room_Location__c</fullName>
    <description>Physical location in the home where observation was made</description>
    <inlineHelpText>Select the room or area where this observation was captured.</inlineHelpText>
    <label>Room Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Bedroom</fullName>
            </value>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Stairs</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>